--- a/playbooks/wat.yml
+++ b/playbooks/wat.yml
@@ -4,7 +4,6 @@
 
   tasks:
     - name: Update and upgrade apt packages
-      ansible.builtinapt:
-        upgrade: yes
-        update_cache: yes
-        cache_valid_time: 86400
+      ansible.builtin.apt:
+        upgrade: true
+        update_cache: true
