--- a/playbooks/wat.yml
+++ b/playbooks/wat.yml
@@ -1,6 +1,8 @@
 - name: Install semaphore
-  hosts: me
+  hosts: test
   gather_facts: true
+  remote_user: root
+  ansible_user: root
 
   tasks:
     - name: Update and upgrade apt packages
